[gd_scene load_steps=4 format=3 uid="uid://e1gy3y60b3pm"]

[ext_resource type="Script" path="res://army/Knight.gd" id="1_tlqr1"]
[ext_resource type="Script" path="res://army/PopupMenuKnight.gd" id="2_o7qa1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wiecq"]
size = Vector2(62, 60)

[node name="KnightArea" type="Area2D"]
script = ExtResource("1_tlqr1")

[node name="Texture" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_wiecq")

[node name="PopupMenu" type="PopupMenu" parent="."]
script = ExtResource("2_o7qa1")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
